--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Secret service -- Germany'
 - !lcc 'UB'
 - !lcsh 'Spies'
+- GITenberg
 title: The German Spy System from Within
 url: http://www.gutenberg.org/ebooks/41457
